# terminal-karaoke

./: .gitignore  README.md  dlp_test.py  gay.txt  main.py  pyproject.toml  requirements.txt  setup.py
karaoke/: __main__.py  audio.py  downloader.py  player.py  ui.py
terminal-karaoke/: __init__.py
terminal_karaoke/: __init__.py  audio.py  downloader.py  lyrics.py  main.py  menus.py  player.py  playlist.py  playlist_ui.py  recorder.py  ui.py
