[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-karaoke"
version = "1.0.5"
authors = [
    {name = "Dexter Morgan", email = "paarivah@proton.me"},
]
description = "A terminal-based karaoke player"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "audioop-lts>=0.2.2",
    "beautifulsoup4>=4.13.5",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "requests>=2.32.5",
    "windows-curses>=2.4.1",
    "yt-dlp>=2024.12.1",
]

[project.urls]
"Homepage" = "https://github.com/hissterical/terminal-karaoke"
"Bug Tracker" = "https://github.com/hissterical/terminal-karaoke/issues"

[project.scripts]
terminal-karaoke = "terminal_karaoke.main:run"

